
- Issue #11657: Fix sending file descriptors over 255 over a multiprocessing
  Pipe.

- Issue #13007: whichdb should recognize gdbm 1.9 magic numbers.

- Issue #12213: Fix a buffering bug with interleaved reads and writes that
  could appear on BufferedRandom streams.

- Issue #12650: Fix a race condition where a subprocess.Popen could leak
  resources (FD/zombie) when killed at the wrong time.

Tests
-----

- Issue #12821: Fix test_fcntl failures on OpenBSD 5.

- Re-enable lib2to3's test_parser.py tests, though with an expected failure
  (see issue 13125).

Extension Modules
-----------------

- Issue #13159: FileIO and BZ2File now use a linear-time buffer growth
  strategy instead of a quadratic-time one.

- Issue #13070: Fix a crash when a TextIOWrapper caught in a reference cycle
  would be finalized after the reference to its underlying BufferedRWPair's
  writer got cleared by the GC.

- Issue #12881: ctypes: Fix segfault with large structure field names.

- Issue #13058: ossaudiodev: fix a file descriptor leak on error. Patch by
  Thomas Jarosch.

- Issue #13013: ctypes: Fix a reference leak in PyCArrayType_from_ctype.
  Thanks to Suman Saha for finding the bug and providing a patch.

- Issue #13022: Fix: _multiprocessing.recvfd() doesn't check that
  file descriptor was actually received.

- Issue #12483: ctypes: Fix a crash when the destruction of a callback
  object triggers the garbage collector.

- Issue #12950: Fix passing file descriptors in multiprocessing, under
  OpenIndiana/Illumos.

What's New in Python 3.2.2?
===========================

*Release date: 03-Sep-2011*

Core and Builtins
-----------------

- Issue #12326: sys.platform is now always 'linux2' on Linux, even if Python
  is compiled on Linux 3.

- Accept bytes for the AST string type. This is temporary until a proper fix in
  3.3.

Library
-------

- Issue #8286: The distutils command sdist will print a warning message instead